--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dropzone": "^14.3.5",
     "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
