--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "web-vitals": "^4.2.4"
